--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,4 +1,4 @@
-@import '../../assets/stylesheets/variables';
+@import "../../assets/stylesheets/variables";
 .pia {
   &-versionInfoBlock {
     color: $pia-green;
@@ -18,11 +18,15 @@
     margin-bottom: 24px;
   }
   &-logoBlock {
-    text-align: center;
-    height: 48px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: 62px;
+
     a {
       img {
         vertical-align: middle;
+        width: 200px;
       }
     }
     div {
