--- a/src/assets/stylesheets/_variables.scss
+++ b/src/assets/stylesheets/_variables.scss
@@ -1,15 +1,17 @@
 // General colors
-$pia-green: #3EE095;
-$pia-red: #FD4664;
-$pia-blue: #091C6B;
-$pia-white: #F5F5F5;
-$pia-gray: #A7A7A7;
+$pia-green: #9bc53d;
+$pia-red: #ee2925;
+$pia-blue: #5bc0eb;
+$pia-white: #f5f5f5;
+$pia-gray: #a7a7a7;
 $pia-light-black: #393939;
-$pia-dark-black: #121921;
+$pia-dark-black: #404e4d;
 
 $pia-green-dark: #127137;
-$pia-red-dark: #C40288;
+$pia-red-dark: #a3333d;
 $pia-gray-dark: #686868;
+
+$rezz-red: #ee2925;
 
 // Settings Foundation
 $global-flexbox: true;
@@ -18,11 +20,11 @@ $global-width: 1180px;
 $global-lineheight: 1.5;
 
 $breakpoints: (
-    small: 0,
-    medium: 640px,
-    large: 1024px,
-    xlarge: 1200px,
-    xxlarge: 1440px,
+  small: 0,
+  large: 1024px,
+  medium: 640px,
+  xlarge: 1200px,
+  xxlarge: 1440px
 );
 $print-breakpoint: large;
 $breakpoint-classes: (small medium large);
@@ -30,8 +32,8 @@ $breakpoint-classes: (small medium large);
 $grid-row-width: $global-width;
 $grid-column-count: 12;
 $grid-column-gutter: (
-    small: 50px,
-    medium: 20px,
+  small: 50px,
+  medium: 20px
 );
 $grid-column-align-edge: true;
 $block-grid-max: 8;
