Finish first page

--- a/src/assets/stylesheets/_variables.scss
+++ b/src/assets/stylesheets/_variables.scss
@@ -1,7 +1,7 @@
 // General colors
-$pia-green: #9bc53d;
-$pia-red: #ee2925;
-$pia-blue: #5bc0eb;
+$pia-green: #2c4f4f;
+$pia-red: #811e0a;
+$pia-blue: #99a6b7;
 $pia-white: #f5f5f5;
 $pia-gray: #a7a7a7;
 $pia-light-black: #393939;
@@ -11,7 +11,7 @@ $pia-green-dark: #127137;
 $pia-red-dark: #a3333d;
 $pia-gray-dark: #686868;
 
-$rezz-red: #ee2925;
+$rezz-red: #811e0a;
 
 // Settings Foundation
 $global-flexbox: true;
