--- a/src/app/authentication/authentication.component.scss
+++ b/src/app/authentication/authentication.component.scss
@@ -1,4 +1,4 @@
-@import '../../assets/stylesheets/variables';
+@import "../../assets/stylesheets/variables";
 .pia {
   &-closeFullScreenModeAlertBlock {
     color: #fff;
@@ -9,164 +9,179 @@
   }
 }
 .pia-authenticationBlock {
-    padding-top: 110px;
-    &-warning {
-      color: white;
-    }
-    &-logo {
-        > div:first-child {
-          margin-bottom: 37px;
-          margin-left: 20px;
-          width: initial;
-          img, > div {
-            display: inline-block;
-            vertical-align: middle;
-          }
-          > div {
-            color: $pia-blue;
-            h1 {
-              font-size: 2.5rem;
-              margin: 0;
-              margin-top: -10px;
-              line-height: 3.2rem;
-            }
-            div {
-              font-weight: initial;
-              font-size: 2.4rem;
-            }
-          }
-        }
-
-        > div {
-            width: 350px;
-        }
-        h2, p {
-            position: relative;
-            text-transform: uppercase;
-            color: #fff;
-            font-size: 1.4rem;
-            line-height: 1.55rem;
-            font-weight: bold;
-            margin: 10px auto;
-            padding: 6px 30px 6px 6px;
-            background-color: $pia-green;
-            border-top-right-radius: 20px;
-            border-bottom-right-radius: 20px;
-            display: inline-block;
-            &:before {
-                position: absolute;
-                top: 0;
-                bottom: 0;
-                left: -5px;
-                content: '';
-                background-color: $pia-green;
-                width: 10px;
-                transform: skewX(-10deg);
-            }
-        }
-    }
-    &-auth {
-        margin-left: 10px;
-        width: 280px;
-        box-shadow: 0 0 50px #aaa;
-    }
-    &-register, &-enter {
-        background-color: #fff;
-        font-size: 1.4rem;
-        padding: 10px;
-        > div {
-            color: $pia-blue;
-            display: block;
-            padding: 5px;
-            font-size: 1.3rem;
-            font-weight: 500;
-        }
-        a {
-            display: block;
-            font-size: 1.3rem;
-            margin: 2px auto;
-            width: 120px;
-            padding: 4px 10px;
-            text-align: center;
-            text-decoration: none;
-            color: $pia-green;
-            &:focus, &:hover, &:active {
-                background-color: $pia-green;
-                color: #fff;
-            }
-        }
-    }
-    &-enter {
-        background-color: $pia-blue;
-        margin-top: 10%;
-        > div {
-            color: #fff;
-            margin-bottom: 20px;
-        }
-    }
-    &-login {
-        background-color: $pia-blue;
-        padding-bottom: 10px;
-        fieldset {
-            border: none;
-            margin: 0;
-            padding: 0;
-
-        }
-        legend {
-            margin: 0;
-            font-size: 1.3rem;
-            color: #fff;
-            padding-top: 12px;
-            padding-left: 15px;
-            font-weight: 500;
-        }
-        label {
-            padding-top: 10px;
-            display: block;
-            margin: auto;
-            color: #fff;
-            font-size: 1rem;
-        }
-        input {
-            width: 100%;
-            padding: 5px;
-            margin: 3px auto;
-            margin-top: 0;
+  .auth-centered {
+    flex-direction: column;
+    align-items: center;
+  }
+  padding-top: 110px;
+  &-warning {
+    color: $pia-light-black;
+  }
+  &-logo {
+    > div:first-child {
+      margin-bottom: 37px;
+      margin-left: 20px;
+      width: initial;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      img,
+      > div {
+        vertical-align: middle;
+        width: 310px;
+      }
+      > div {
+        color: $pia-gray-dark;
+        h1 {
+          font-size: 1.75rem;
+          margin: 0;
+          font-weight: lighter;
+          text-transform: uppercase;
+          text-align: center;
+          margin-top: 5px;
         }
         div {
-            margin-left: 15px;
-            margin-right: 15px;
+          font-weight: initial;
+          font-size: 2.4rem;
         }
-        div:last-of-type {
-            label {
-                padding-top: 1px;
-            }
-        }
-        button[type="submit"] {
-            display: block;
-            margin-top: 20px;
-            margin-left: auto;
-            margin-right: auto;
-            width: 120px;
-            text-align: center;
-            border-radius: 15px;
-            text-decoration: none;
-            font-size: 1.3rem;
-            background-color: $pia-green;
-            color: #fff;
-        }
-        a {
-            display: block;
-            text-align: center;
-            padding: 5px;
-            padding-top: 8px;
-            text-decoration: none;
-            font-size: 0.9rem;
-            color: #fff;
-            cursor: pointer;
-        }
+      }
     }
+
+    > div {
+      width: 350px;
+    }
+    h2,
+    p {
+      position: relative;
+      text-transform: uppercase;
+      color: #fff;
+      font-size: 1.4rem;
+      line-height: 1.55rem;
+      font-weight: bold;
+      margin: 10px auto;
+      padding: 6px 30px 6px 6px;
+      background-color: $rezz-red;
+      border-top-right-radius: 20px;
+      border-bottom-right-radius: 20px;
+      display: inline-block;
+      &:before {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: -5px;
+        content: "";
+        background-color: $rezz-red;
+        width: 10px;
+        transform: skewX(-10deg);
+      }
+    }
+  }
+  &-auth {
+    margin-left: 10px;
+    width: 620px;
+    box-shadow: 0 0 50px #aaa;
+  }
+  &-register,
+  &-enter {
+    background-color: #fff;
+    font-size: 1.4rem;
+    padding: 10px 25px 20px;
+    > div {
+      color: $pia-blue;
+      display: block;
+      padding: 5px;
+      font-size: 1.3rem;
+      font-weight: 500;
+    }
+    a {
+      display: block;
+      font-size: 2rem;
+      margin: 2px auto;
+      width: 120px;
+      padding: 4px 10px;
+      text-align: center;
+      text-decoration: none;
+      color: $pia-green;
+      font-weight: bold;
+      text-transform: uppercase;
+      &:focus,
+      &:hover,
+      &:active {
+        background-color: $pia-green;
+        color: #fff;
+      }
+    }
+  }
+  &-enter {
+    background-color: $pia-white;
+    margin-top: 10%;
+    > div {
+      color: $pia-light-black;
+      margin-bottom: 20px;
+    }
+  }
+  &-login {
+    background-color: $pia-blue;
+    padding-bottom: 10px;
+    fieldset {
+      border: none;
+      margin: 0;
+      padding: 0;
+    }
+    legend {
+      margin: 0;
+      font-size: 1.3rem;
+      color: #fff;
+      padding-top: 12px;
+      padding-left: 15px;
+      font-weight: 500;
+    }
+    label {
+      padding-top: 10px;
+      display: block;
+      margin: auto;
+      color: #fff;
+      font-size: 1rem;
+    }
+    input {
+      width: 100%;
+      padding: 5px;
+      margin: 3px auto;
+      margin-top: 0;
+    }
+    div {
+      margin-left: 15px;
+      margin-right: 15px;
+    }
+    div:last-of-type {
+      label {
+        padding-top: 1px;
+      }
+    }
+    button[type="submit"] {
+      display: block;
+      margin-top: 20px;
+      margin-left: auto;
+      margin-right: auto;
+      width: 120px;
+      text-align: center;
+      border-radius: 15px;
+      text-decoration: none;
+      font-size: 1.3rem;
+      background-color: $rezz-red;
+      color: #fff;
+    }
+    a {
+      display: block;
+      text-align: center;
+      padding: 5px;
+      padding-top: 8px;
+      text-decoration: none;
+      font-size: 0.9rem;
+      color: #fff;
+      cursor: pointer;
+    }
+  }
 }
 
 .pia-navigationBlock {
