--- a/src/app/structures/list-item/list-item.component.scss
+++ b/src/app/structures/list-item/list-item.component.scss
@@ -1,4 +1,4 @@
-@import '../../../assets/stylesheets/variables';
+@import "../../../assets/stylesheets/variables";
 
 .pia-listsBlock-item {
   position: relative;
@@ -13,10 +13,13 @@
   }
   div[contenteditable] {
     cursor: text;
-    &:focus, &:hover, &:active {
+    &:focus,
+    &:hover,
+    &:active {
       outline: 1px dotted $pia-green;
     }
-    &:focus, &:active {
+    &:focus,
+    &:active {
       background-color: #fff;
     }
   }
@@ -31,7 +34,7 @@
     align-items: flex-start;
     align-content: stretch;
     a {
-      color: $pia-green;
+      color: $pia-light-black;
       font-size: 2rem;
       margin: 0 10px 0 0;
       text-decoration: none;
@@ -69,7 +72,9 @@
         }
       }
     }
-    &:focus, &:hover, &:active {
+    &:focus,
+    &:hover,
+    &:active {
       ul {
         display: block;
       }
