--- a/src/app/structures/structures.component.scss
+++ b/src/app/structures/structures.component.scss
@@ -1,4 +1,4 @@
-@import '../../assets/stylesheets/variables';
+@import "../../assets/stylesheets/variables";
 
 // New PIA
 .pia-newBlock {
@@ -10,25 +10,29 @@
     background: url("../../assets/images/pia-bg.png") repeat center center;
     padding: 40px;
     font-size: 1.9rem;
-    color: $pia-green;
+    color: $pia-blue;
     height: 400px;
     width: 274px;
-    &-new, &-import {
+    &-new,
+    &-import {
       &-title {
         padding-bottom: 10px;
       }
       &-btn {
         padding-left: 18px;
-        .fa-folder-open, .fa-upload {
-            font-size: 7rem;
-            margin-right: 30px;
+        .fa-folder-open,
+        .fa-upload {
+          font-size: 7rem;
+          margin-right: 30px;
         }
         .fa-upload {
-            margin-right: 40px;
+          margin-right: 40px;
         }
-        .fa-folder-open, .fa-upload, button {
-            display: inline-block;
-            vertical-align: top;
+        .fa-folder-open,
+        .fa-upload,
+        button {
+          display: inline-block;
+          vertical-align: top;
         }
       }
     }
@@ -45,7 +49,7 @@
     width: 300px;
     height: 200px;
     border-radius: 10px;
-    box-shadow: 0px 0px 18px 2px rgba(212,212,212,1);
+    box-shadow: 0px 0px 18px 2px rgba(212, 212, 212, 1);
     top: 110px;
     right: -323px;
     .pia-icon-small-arrow {
@@ -74,7 +78,8 @@
   &-filtersBlock {
     position: relative;
     margin: 8px 0 15px 0;
-    &-switch, &-filters {
+    &-switch,
+    &-filters {
       display: inline-block;
       vertical-align: middle;
     }
@@ -83,27 +88,29 @@
       vertical-align: middle;
       width: 34px;
       height: 34px;
-      border: 1px solid $pia-green;
+      border: 1px solid $pia-blue;
       border-radius: 20px;
-      color: $pia-green;
+      color: $pia-blue;
       div {
         font-size: 1.1rem;
         margin-top: -2px;
       }
-      &:hover, &:focus {
-        background: $pia-green;
-        border-color: $pia-green;
+      &:hover,
+      &:focus {
+        background: $pia-blue;
+        border-color: $pia-blue;
         color: #fff;
       }
       &:active {
-        color: $pia-green;
+        color: $pia-blue;
         background-color: #fff;
-        border-color: $pia-green;
+        border-color: $pia-blue;
       }
     }
     &-filters {
       position: relative;
       margin-left: 12px;
+      width: 120px;
       &-list {
         z-index: 998;
         background-color: #eee;
@@ -113,7 +120,7 @@
         top: 15px;
         left: 0;
         right: 0;
-        border: 2px solid $pia-green;
+        border: 2px solid $pia-blue;
         border-top: none;
         border-bottom-left-radius: 20px;
         border-bottom-right-radius: 20px;
@@ -136,7 +143,10 @@
             text-decoration: none;
             color: #000;
           }
-          &:focus, &:hover, &:active, .active {
+          &:focus,
+          &:hover,
+          &:active,
+          .active {
             background-color: $pia-blue;
             a {
               color: #ffffff !important;
@@ -147,18 +157,21 @@
         }
       }
       &-btn {
-        border: 1px solid $pia-green;
+        border: 1px solid $pia-blue;
         border-radius: 20px;
-        color: $pia-green;
+        color: $pia-blue;
         padding: 9px 12px 9px 16px;
         font-size: 1.3rem;
         font-weight: 500;
         position: relative;
         z-index: 999;
+        width: 100%;
         .pia-icon-scroll-green {
           margin-left: 35px;
         }
-        &:focus, &:hover, &:active {
+        &:focus,
+        &:hover,
+        &:active {
           + .pia-filtersBlock-filters-list {
             display: block;
           }
@@ -167,7 +180,7 @@
       &:hover {
         .pia-filtersBlock-filters-btn {
           color: #fff;
-          background-color: $pia-green;
+          background-color: $pia-blue;
           .pia-icon-scroll-green {
             background-position: -367px -39px;
           }
@@ -179,14 +192,15 @@
     }
     &-hint {
       position: relative;
-      display:inline-block;
+      display: inline-block;
       vertical-align: middle;
       background-color: #fff;
       border-radius: 10px;
       padding: 3px 24px 5px 26px;
       margin-left: 10px;
       div {
-        span, p {
+        span,
+        p {
           display: inline-block;
           vertical-align: middle;
         }
@@ -217,10 +231,9 @@
   }
 }
 
-
 // Edit PIA
 .pia-editBlock {
-  border-color: $pia-green;
+  border-color: $pia-blue;
   button {
     display: block;
     margin-right: 0;
@@ -240,13 +253,13 @@
   transition: transform 1s;
 }
 #cardsSwitch .back {
-  transform: rotateY( 180deg );
+  transform: rotateY(180deg);
 }
 #cardsSwitch.flipped .back {
-  transform: rotateY( 0deg );
+  transform: rotateY(0deg);
 }
 #cardsSwitch.flipped .front {
-  transform: rotateY( 180deg );
+  transform: rotateY(180deg);
 }
 
 // List PIA
@@ -292,7 +305,7 @@
       span {
         border-left: solid 1px $pia-white;
         &:last-child {
-            padding-left: 13px;
+          padding-left: 13px;
         }
       }
       &:first-child span:first-of-type {
@@ -301,16 +314,16 @@
     }
   }
 }
-.pia-cardsBlock-item-form input{
+.pia-cardsBlock-item-form input {
   padding-bottom: 0;
 }
 .app-list-item {
   display: table-row;
   &:nth-child(even) {
-    background-color: rgba(62, 224, 149, 0.15);
+    background-color: rgba($pia-blue, 0.15);
   }
   &:hover {
-    background-color: rgba(62, 224, 149, 0.25);
+    background-color: rgba($pia-blue, 0.25);
   }
 }
 .pia-icon-close {
