--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
-@import './assets/stylesheets/variables';
+@import "./assets/stylesheets/variables";
 
 @import "~normalize.css/normalize.css";
 
@@ -34,19 +34,21 @@ $fa-font-path: "~font-awesome/fonts";
 
 // Default styles
 html {
-    font-size: 62.5%;
+  font-size: 62.5%;
 }
 body {
-    font-size: 1.2rem;
-    font-family: 'Roboto', sans-serif;
-    background-color: $pia-white;
+  font-size: 1.2rem;
+  font-family: "Roboto", sans-serif;
+  background-color: $pia-white;
 }
-html, body {
-    height: 100%;
+html,
+body {
+  height: 100%;
 }
 body {
   &.pia-authentication {
-    background: url("./assets/images/authentication-bg.png") no-repeat center center transparent;
+    background: url("./assets/images/authentication-bg.png") no-repeat center
+      center transparent;
     background-size: cover;
   }
 }
@@ -98,10 +100,12 @@ angular2csv {
 
 .green-highlight {
   color: $pia-green;
+  font-weight: 600;
 }
 
 // Mostly used for displayers
-.close, .hide {
+.close,
+.hide {
   display: none !important;
 }
 .open {
@@ -118,8 +122,8 @@ angular2csv {
   &:after {
     cursor: not-allowed;
     z-index: 1000;
-    content: '';
-    background-color: rgba(0,0,0,0.6);
+    content: "";
+    background-color: rgba(0, 0, 0, 0.6);
     position: absolute;
     top: 0;
     bottom: 0;
@@ -155,7 +159,7 @@ tag-input-form {
 }
 
 .tag--editing {
-  background-color: rgba(0,0,0,0.1) !important;
+  background-color: rgba(0, 0, 0, 0.1) !important;
 }
 
 .truncate {
@@ -166,8 +170,8 @@ tag-input-form {
 
 /* http://cssload.net Generator */
 .cssload-container {
-	width: 100%;
-	height: 44px;
+  width: 100%;
+  height: 44px;
   text-align: center;
   position: absolute;
   top: 50%;
@@ -175,38 +179,53 @@ tag-input-form {
 }
 
 .cssload-speeding-wheel {
-	width: 44px;
-	height: 44px;
-	margin: 0 auto;
-	border: 3px solid rgb(0,0,0);
-	border-radius: 50%;
-	border-left-color: transparent;
-	border-right-color: transparent;
-	animation: cssload-spin 800ms infinite linear;
-		-o-animation: cssload-spin 800ms infinite linear;
-		-ms-animation: cssload-spin 800ms infinite linear;
-		-webkit-animation: cssload-spin 800ms infinite linear;
-		-moz-animation: cssload-spin 800ms infinite linear;
+  width: 44px;
+  height: 44px;
+  margin: 0 auto;
+  border: 3px solid rgb(0, 0, 0);
+  border-radius: 50%;
+  border-left-color: transparent;
+  border-right-color: transparent;
+  animation: cssload-spin 800ms infinite linear;
+  -o-animation: cssload-spin 800ms infinite linear;
+  -ms-animation: cssload-spin 800ms infinite linear;
+  -webkit-animation: cssload-spin 800ms infinite linear;
+  -moz-animation: cssload-spin 800ms infinite linear;
 }
 
 @keyframes cssload-spin {
-	100%{ transform: rotate(360deg); transform: rotate(360deg); }
+  100% {
+    transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
 }
 
 @-o-keyframes cssload-spin {
-	100%{ -o-transform: rotate(360deg); transform: rotate(360deg); }
+  100% {
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
 }
 
 @-ms-keyframes cssload-spin {
-	100%{ -ms-transform: rotate(360deg); transform: rotate(360deg); }
+  100% {
+    -ms-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
 }
 
 @-webkit-keyframes cssload-spin {
-	100%{ -webkit-transform: rotate(360deg); transform: rotate(360deg); }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
 }
 
 @-moz-keyframes cssload-spin {
-	100%{ -moz-transform: rotate(360deg); transform: rotate(360deg); }
+  100% {
+    -moz-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
 }
 
 .pia-helpBlock-content {
