--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="small-12 medium-12 columns">
         <a routerLink="/home"
-          ><img src="assets/images/rezzonade.png" alt="Logo PIA"
+          ><img src="assets/images/r3spct.png" alt="Logo PIA"
         /></a>
         <div>
           {{ "header.logo_title" | translate }}<br /><span>{{
