--- a/src/app/authentication/authentication.component.html
+++ b/src/app/authentication/authentication.component.html
@@ -252,7 +252,7 @@
   <div class="row auth-centered">
     <div class="small-12 medium-8 columns pia-authenticationBlock-logo">
       <div>
-        <img src="assets/images/rezzonade.png" alt="Logo PIA" />
+        <img src="assets/images/r3spct.png" alt="Logo R3spct" />
         <div>
           <h1 [innerHTML]="'authentication.title' | translate"></h1>
         </div>
